<resources>
    <string name="app_name">Contacts Hacker</string>
    <string name="settings">Settings</string>

    <string name="app_intro">
        This is the Contacts Hacker App.
        It changes all of the contacts on this device\'s contact list
        into whatever you want; for example, \"Batman\".
    </string>
    <string name="single_name">Change All Contacts Into 1 Name</string>
    <string name="scramble">Scramble Contacts</string>
    <string name="grab_bag">Grab Bag Fun Time</string>
    <string name="undo_changes">Undo Changes</string>
    <string name="no_changes">There are no changes to undo.</string>
    <string name="change">Change</string>
    <string name="contacts_error">
        We were unable to change this device\'s contacts list.
        Please make sure that it has all the proper permissions.
    </string>
    <string name="contacts_success">Contacts successfully changed.</string>
    <string name="contacts_success_verbose">Contacts successfully changed. Would you like to view them now?</string>
    <string name="contacts_repaired">Contacts list successfully restored.</string>

    <string name="write_contacts_explanation">
        In order for this app to work, you need to allow us to change the device\'s contacts.
    </string>
    <string name="read_contacts_explanation">
        In order for this app to back up contacts, you need to allow us to read the device\'s contact information.
    </string>
    <string name="write_external_explanation">
        This app backs up contacts by writing them to an external file,
        which allows it to undo its changes even if it\'s uninstalled.
        In order for this to happen, you need to give us access to this device\'s external storage.
    </string>

    <!-- Grab bag -->
    <string name="grab_bag_intro">
        Here, you can rename each of the contacts on this device
        to a random name from your \"grab bag\" below.
    </string>
    <string name="name_1">Name 1</string>
    <string name="name_2">Name 2</string>
    <string name="name_3">Name 3</string>
    <string name="name_4">Name 4</string>
    <string name="name_5">Name 5</string>
    <string name="change_contacts">Change Contacts</string>
    <string name="our_suggestions">Our Suggestions</string>
    <string name="no_names">Your grab bag needs to have at least 1 name in it.</string>

    <!-- Our Suggestions -->
    <string name="suggestions_intro">
        Simply click on any one of the preset lists below to use it as your \"grab bag\".
    </string>
    <string name="are_you_sure">
        Are you sure that you want to rename each of the contacts on this device
        to a randomly selected member of the \"
    </string>

    <!-- Contacts changing -->
    <string name="hacking_progress">Hacking Progress</string>
    <string name="changing_contacts">Changing contacts&#8230;</string>
    <string name="repair_progress">Repair Progress</string>
    <string name="restoring_contacts">Restoring contacts&#8230;</string>

    <!-- Single name -->
    <string name="name">Name</string>
    <string name="single_name_body">
        Enter in the name you want to change all of this device\'s contacts into.
    </string>

    <string name="view_contacts">View contacts</string>
</resources>
